// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Canvas renders correctly 1`] = `
<Canvas
  data={
    Object {
      "BlockGroup": Object {
        "block-623187": Object {
          "x": 132,
          "y": 118,
        },
        "block-624018": Object {
          "x": 426,
          "y": -50,
        },
        "block-73377": Object {
          "x": 428,
          "y": 306,
        },
      },
      "CanvasPosition": Object {
        "gap": 1,
        "x": -67,
        "y": 230,
        "z": 0,
      },
      "LineGroup": Object {
        "line-592694": Object {
          "from": Object {
            "bottom": 428,
            "height": 80,
            "left": 65,
            "right": 165,
            "top": 348,
            "width": 100,
            "x": 65,
            "y": 348,
          },
          "fromKey": "block-623187",
          "to": Object {
            "bottom": 260,
            "height": 80,
            "left": 360,
            "right": 460,
            "top": 180,
            "width": 100,
            "x": 360,
            "y": 180,
          },
          "toKey": "block-624018",
        },
        "line-77619": Object {
          "from": Object {
            "bottom": 616,
            "height": 80,
            "left": 361,
            "right": 461,
            "top": 536,
            "width": 100,
            "x": 361,
            "y": 536,
          },
          "fromKey": "block-73377",
          "to": Object {
            "bottom": 428,
            "height": 80,
            "left": 65,
            "right": 165,
            "top": 348,
            "width": 100,
            "x": 65,
            "y": 348,
          },
          "toKey": "block-623187",
        },
      },
      "TagGroup": Object {
        "tag-626505": Object {
          "editable": false,
          "input": "test",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 169,
          "y": 144,
        },
        "tag-629962": Object {
          "editable": false,
          "input": "test2",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 462,
          "y": -23,
        },
        "tag-80986": Object {
          "editable": false,
          "input": "test3",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 463,
          "y": 333,
        },
      },
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": -67,
        "y": 230,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      cancel={null}
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(-67px,230px)",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={
            Object {
              "block-623187": Object {
                "x": 132,
                "y": 118,
              },
              "block-624018": Object {
                "x": 426,
                "y": -50,
              },
              "block-73377": Object {
                "x": 428,
                "y": 306,
              },
            }
          }
          lineData={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 260,
                  "height": 80,
                  "left": 360,
                  "right": 460,
                  "top": 180,
                  "width": 100,
                  "x": 360,
                  "y": 180,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 616,
                  "height": 80,
                  "left": 361,
                  "right": 461,
                  "top": 536,
                  "width": 100,
                  "x": 361,
                  "y": 536,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "toKey": "block-623187",
              },
            }
          }
          offset={
            Object {
              "gap": 1,
              "x": -67,
              "y": 230,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-623187"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 132,
                "y": 118,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(132px,118px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="block-group animate-appear"
                  data={
                    Object {
                      "block-623187": Object {
                        "x": 132,
                        "y": 118,
                      },
                      "block-624018": Object {
                        "x": 426,
                        "y": -50,
                      },
                      "block-73377": Object {
                        "x": 428,
                        "y": 306,
                      },
                    }
                  }
                  key="nino-zone-block-623187"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="block-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="block-623187"
                >
                  <div
                    className="block-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  />
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-624018"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 426,
                "y": -50,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(426px,-50px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="block-group animate-appear"
                  data={
                    Object {
                      "block-623187": Object {
                        "x": 132,
                        "y": 118,
                      },
                      "block-624018": Object {
                        "x": 426,
                        "y": -50,
                      },
                      "block-73377": Object {
                        "x": 428,
                        "y": 306,
                      },
                    }
                  }
                  key="nino-zone-block-624018"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="block-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="block-624018"
                >
                  <div
                    className="block-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  />
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-73377"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 428,
                "y": 306,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(428px,306px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="block-group animate-appear"
                  data={
                    Object {
                      "block-623187": Object {
                        "x": 132,
                        "y": 118,
                      },
                      "block-624018": Object {
                        "x": 426,
                        "y": -50,
                      },
                      "block-73377": Object {
                        "x": 428,
                        "y": 306,
                      },
                    }
                  }
                  key="nino-zone-block-73377"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="block-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="block-73377"
                >
                  <div
                    className="block-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  />
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
        </BlockGroup>
        <TagGroup
          data={
            Object {
              "tag-626505": Object {
                "editable": false,
                "input": "test",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 169,
                "y": 144,
              },
              "tag-629962": Object {
                "editable": false,
                "input": "test2",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 462,
                "y": -23,
              },
              "tag-80986": Object {
                "editable": false,
                "input": "test3",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 463,
                "y": 333,
              },
            }
          }
          lineData={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 260,
                  "height": 80,
                  "left": 360,
                  "right": 460,
                  "top": 180,
                  "width": 100,
                  "x": 360,
                  "y": 180,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 616,
                  "height": 80,
                  "left": 361,
                  "right": 461,
                  "top": 536,
                  "width": 100,
                  "x": 361,
                  "y": 536,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "toKey": "block-623187",
              },
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-626505"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 169,
                "y": 144,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(169px,144px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="tag-group animate-appear"
                  data={
                    Object {
                      "tag-626505": Object {
                        "editable": false,
                        "input": "test",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 169,
                        "y": 144,
                      },
                      "tag-629962": Object {
                        "editable": false,
                        "input": "test2",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 462,
                        "y": -23,
                      },
                      "tag-80986": Object {
                        "editable": false,
                        "input": "test3",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 463,
                        "y": 333,
                      },
                    }
                  }
                  key="nino-zone-tag-626505"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="tag-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="tag-626505"
                >
                  <div
                    className="tag-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    test
                  </div>
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-629962"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 462,
                "y": -23,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(462px,-23px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="tag-group animate-appear"
                  data={
                    Object {
                      "tag-626505": Object {
                        "editable": false,
                        "input": "test",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 169,
                        "y": 144,
                      },
                      "tag-629962": Object {
                        "editable": false,
                        "input": "test2",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 462,
                        "y": -23,
                      },
                      "tag-80986": Object {
                        "editable": false,
                        "input": "test3",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 463,
                        "y": 333,
                      },
                    }
                  }
                  key="nino-zone-tag-629962"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="tag-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="tag-629962"
                >
                  <div
                    className="tag-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    test2
                  </div>
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-80986"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 463,
                "y": 333,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              cancel={null}
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              transform={null}
            >
              <div
                className="react-draggable"
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(463px,333px)",
                  }
                }
                transform={null}
              >
                <NinoZone
                  className="tag-group animate-appear"
                  data={
                    Object {
                      "tag-626505": Object {
                        "editable": false,
                        "input": "test",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 169,
                        "y": 144,
                      },
                      "tag-629962": Object {
                        "editable": false,
                        "input": "test2",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 462,
                        "y": -23,
                      },
                      "tag-80986": Object {
                        "editable": false,
                        "input": "test3",
                        "style": Object {
                          "height": 32,
                          "width": 100,
                        },
                        "x": 463,
                        "y": 333,
                      },
                    }
                  }
                  key="nino-zone-tag-80986"
                  lineData={
                    Object {
                      "line-592694": Object {
                        "from": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "fromKey": "block-623187",
                        "to": Object {
                          "bottom": 260,
                          "height": 80,
                          "left": 360,
                          "right": 460,
                          "top": 180,
                          "width": 100,
                          "x": 360,
                          "y": 180,
                        },
                        "toKey": "block-624018",
                      },
                      "line-77619": Object {
                        "from": Object {
                          "bottom": 616,
                          "height": 80,
                          "left": 361,
                          "right": 461,
                          "top": 536,
                          "width": 100,
                          "x": 361,
                          "y": 536,
                        },
                        "fromKey": "block-73377",
                        "to": Object {
                          "bottom": 428,
                          "height": 80,
                          "left": 65,
                          "right": 165,
                          "top": 348,
                          "width": 100,
                          "x": 65,
                          "y": 348,
                        },
                        "toKey": "block-623187",
                      },
                    }
                  }
                  name="tag-group"
                  onChange={[Function]}
                  onContextMenu={[Function]}
                  targetKey="tag-80986"
                >
                  <div
                    className="tag-group animate-appear"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    test3
                  </div>
                </NinoZone>
              </div>
            </DraggableCore>
          </Draggable>
        </TagGroup>
        <LineGroup
          data={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 260,
                  "height": 80,
                  "left": 360,
                  "right": 460,
                  "top": 180,
                  "width": 100,
                  "x": 360,
                  "y": 180,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 616,
                  "height": 80,
                  "left": 361,
                  "right": 461,
                  "top": 536,
                  "width": 100,
                  "x": 361,
                  "y": 536,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 428,
                  "height": 80,
                  "left": 65,
                  "right": 165,
                  "top": 348,
                  "width": 100,
                  "x": 65,
                  "y": 348,
                },
                "toKey": "block-623187",
              },
            }
          }
          offset={
            Object {
              "gap": 1,
              "x": -67,
              "y": 230,
              "z": 0,
            }
          }
          orientation="horizonal"
        >
          <SteppedLine
            from={
              Object {
                "bottom": 616,
                "height": 80,
                "left": 361,
                "right": 461,
                "top": 536,
                "width": 100,
                "x": 361,
                "y": 536,
              }
            }
            key="line-77619"
            offset={
              Object {
                "gap": 1,
                "x": -67,
                "y": 230,
                "z": 0,
              }
            }
            orientation="horizonal"
            to={
              Object {
                "bottom": 428,
                "height": 80,
                "left": 65,
                "right": 165,
                "top": 348,
                "width": 100,
                "x": 65,
                "y": 348,
              }
            }
          >
            <div
              className="stepped-line"
            >
              <Line
                x0={428}
                x1={330}
                y0={346}
                y1={346}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(428px, 346px, 0) rotate(180deg)",
                      "width": "98px",
                    }
                  }
                />
              </Line>
              <Line
                x0={330}
                x1={330}
                y0={346}
                y1={158}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(330px, 346px, 0) rotate(-90deg)",
                      "width": "188px",
                    }
                  }
                />
              </Line>
              <Line
                x0={330}
                x1={232}
                y0={158}
                y1={158}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(330px, 158px, 0) rotate(180deg)",
                      "width": "98px",
                    }
                  }
                />
              </Line>
            </div>
          </SteppedLine>
          <SteppedLine
            from={
              Object {
                "bottom": 428,
                "height": 80,
                "left": 65,
                "right": 165,
                "top": 348,
                "width": 100,
                "x": 65,
                "y": 348,
              }
            }
            key="line-592694"
            offset={
              Object {
                "gap": 1,
                "x": -67,
                "y": 230,
                "z": 0,
              }
            }
            orientation="horizonal"
            to={
              Object {
                "bottom": 260,
                "height": 80,
                "left": 360,
                "right": 460,
                "top": 180,
                "width": 100,
                "x": 360,
                "y": 180,
              }
            }
          >
            <div
              className="stepped-line"
            >
              <Line
                x0={232}
                x1={329.5}
                y0={158}
                y1={158}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(232px, 158px, 0) rotate(0deg)",
                      "width": "97.5px",
                    }
                  }
                />
              </Line>
              <Line
                x0={329.5}
                x1={329.5}
                y0={158}
                y1={-10}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(329.5px, 158px, 0) rotate(-90deg)",
                      "width": "168px",
                    }
                  }
                />
              </Line>
              <Line
                x0={329.5}
                x1={427}
                y0={-10}
                y1={-10}
              >
                <div
                  className="line-core"
                  style={
                    Object {
                      "transform": "translate3d(329.5px, -10px, 0) rotate(0deg)",
                      "width": "97.5px",
                    }
                  }
                />
              </Line>
            </div>
          </SteppedLine>
        </LineGroup>
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas render correctly when data is null 1`] = `
<Canvas
  data={null}
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      cancel={null}
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <TagGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          orientation="horizonal"
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas render correctly when data is null 2`] = `
<Canvas>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      cancel={null}
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <TagGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          orientation="horizonal"
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas render correctly when data is null 3`] = `
<Canvas
  data={Object {}}
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      cancel={null}
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "touchAction": "none",
            "transform": "translate(0px,0px)",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <TagGroup
          data={Object {}}
          lineData={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
        <LineGroup
          data={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          orientation="horizonal"
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;
